--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,23 +10,27 @@ services:
       POSTGRES_DB: the_toy_project
     volumes:
       - blog_postgres:/var/lib/postgresql/data
-    ports:
-      - "5432:5432"
-    networks:
-      - the_toy_project
     restart: unless-stopped
 
   redis:
     container_name: blog_redis
     image: redis:6.0.9
     restart: on-failure
-    ports:
-      - "6379:6379"
 
-networks:
-  the_toy_project:
-    driver: bridge
+  blogapp:
+    container_name: blog_app
+    build: .
+    command: python manage.py runserver 0.0.0.0:8000
+    volumes:
+      - .:/code
+    ports:
+      - "8000:8000"
+    depends_on:
+      - postgres
+    image: blogapp
 
 volumes:
   blog_postgres:
+    driver: local
+  blog_app:
     driver: local
